# qr-gen

./: .#app.py  README.md  app.py  directory-structure.txt  hotkey_daemon.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
